// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scaffold snapshots > matches the Codex scaffold snapshot 1`] = `
{
  ".codex/README.md": "# Codex Compatibility Layer

This repository already has working project systems for backlog tracking, planning, and knowledge capture.
Codex should use them directly through this runtime layer.

## Canonical Systems

- .rules/ is the source of truth for architecture and workflow patterns
- .planning/ is the GSD execution and handoff workspace
- .codex/scripts/ contains the live Cognee and planning sync plumbing
- Use native \`bd\` as the Beads task-tracking interface after \`bd init\`

## Codex Mapping

| Existing project surface | Codex entrypoint |
| --- | --- |
| Runtime scripts | .codex/scripts/*.sh |
| Agent role briefs | .codex/agents/*.md |
| Repo setup skill | .codex/skills/scaiff-repo-setup/SKILL.md |
| Cognee advisor | ./.codex/scripts/cognee-brief.sh |
| Planning sync | ./.codex/scripts/sync-planning-to-cognee.sh |
| Landing protocol | ./.codex/scripts/land.sh |

## Runtime Surface

- \`./.codex/scripts/cognee-bridge.sh\` - low-level Cognee query, upload, and cognify entrypoint
- \`./.codex/scripts/cognee-sync-planning.sh\` - sync GSD planning artifacts into Cognee
- \`./.codex/scripts/sync-planning-to-cognee.sh\` - user-facing planning sync entrypoint
- \`./.codex/scripts/bootstrap-worktree.sh\` - seed local worktree state
- \`.codex/docker/Dockerfile.cognee\` - container build source for the Cognee deploy template
- \`.codex/skills/scaiff-repo-setup/SKILL.md\` - reusable setup workflow for new and existing repositories

## Default Workflow

1. Read relevant .rules/ and current .planning/ context.
2. Review .planning/STATE.md before starting implementation.
3. For existing repos, optionally run \`scaiff --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\` before tailoring new scaffold files.
4. Generate a knowledge brief with ./.codex/scripts/cognee-brief.sh.
5. On a fresh worktree, run ./.codex/scripts/bootstrap-worktree.sh.
6. Break work into waves using .codex/workflows/parallel-execution.md.
7. Validate each wave before handing off or merging into the next.
8. Finish with ./.codex/scripts/land.sh.

## Rules

- Do not create parallel planning systems under .codex/.
- Treat .codex/ as the runtime surface for assistant-specific scripts and docs while keeping \`.planning/\` and \`.rules/\` canonical.
- If Cognee is unavailable, continue with .rules/, .planning/, and repo search.
",
  ".gitignore": ".env
.env.local
.env.*.local
node_modules/
dist/
coverage/
.turbo/
__pycache__/
*.pyc
.pytest_cache/
.coverage
.venv/
*.log
.vscode/
.idea/
.DS_Store
STICKYNOTE.md
.beads/.sync.lock
.beads/sync_base.jsonl
.beads/*.db
.beads/backup/
.beads/export/
.beads/README.md
.beads/interactions.jsonl
.kamal/secrets
.kamal/secrets.*
.kamal/secrets-common
!.kamal/secrets.example
cognee_data/
",
  "AGENTS.md": "# AGENTS.md

> AI Development Guide

## Overview

This repository is prepared for Codex through a focused runtime layer while keeping .rules/ and .planning/ as the canonical project systems.

## Codex Workflow

Codex works in this repository through a focused runtime layer. The canonical systems remain:

- .rules/ for architecture and workflow rules
- .planning/ for GSD planning, execution, and handoff artifacts
- .codex/scripts/ for working Cognee and planning sync backends

Use the Codex compatibility docs and scripts under .codex/ as entrypoints, not as a separate source of truth.

### Codex Operating Sequence

1. Read the relevant .rules/ documents before changing code or infrastructure.
2. Inspect .planning/STATE.md and any active phase docs in .planning/.
3. Use native \`bd\` for task tracking after the repository is initialized with \`bd init\`.
4. Query Cognee with ./.codex/scripts/cognee-brief.sh "<query>".
5. On a fresh worktree, run ./.codex/scripts/bootstrap-worktree.sh.
6. Execute work in waves with explicit file ownership and validation boundaries.
7. Land the session with ./.codex/scripts/land.sh.

### Codex Guardrails

- Do not create duplicate planning systems or issue trackers under .codex/.
- Do not mirror .planning/ into .codex-specific directories.
- Keep Cognee integration non-blocking; if it is down, continue using local docs and planning artifacts.
- Treat .codex/agents/*.md as reusable role briefs and .codex/scripts/*.sh as the executable surface.
- Use \`.codex/skills/scaiff-repo-setup/SKILL.md\` when bootstrapping or adopting another repository with scaiff.
- When the user asks for \`task table\`, format the response as a Markdown table with columns \`ID | Priority | Status | Title\`.
",
  "README.md": "# Snapshot Codex

This project is scaffolded for the local AI workflow used across Codex, GSD, Beads, and Cognee.

## What was added

- Planning artifacts in .planning/
- Codex/OpenCode runtime files in .codex/
- Repo setup skill in .codex/skills/scaiff-repo-setup/
- Beads workflow guidance using native \`bd\`
- Deployment templates in config/ and .kamal/
- Codex runtime files in .codex/ and AGENTS.md

## Next steps

1. Update .planning/PROJECT.md with the real product definition.
2. Review AGENTS.md, .codex/README.md, and the guides in .rules/.
3. Copy .env.example to .env and fill in local values.
4. Run \`bd init\` once in the repository before using Beads.
5. Use \`.codex/skills/scaiff-repo-setup/SKILL.md\` when adopting or bootstrapping another repository.
6. If you are adopting a repo with legacy AI framework files, use \`scaiff --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\`.
7. Create a feature branch before your first commit.
",
  "STICKYNOTE.example.md": "# Snapshot Codex Sticky Note

Last updated: 2026-03-28

## Current focus

- Active branch:
- Current task:
- Immediate next step:

## Guardrails

- Read \`.planning/STATE.md\` before resuming implementation.
- Use native \`bd\` after running \`bd init\` in this repository.
- Capture follow-up work before ending the session.

## Handoff notes

- What changed:
- What still needs verification:
- Risks or open questions:
",
  "files": [
    ".codex/README.md",
    ".codex/agents/gsd-cognee-advisor.md",
    ".codex/agents/implementer.md",
    ".codex/agents/orchestrator.md",
    ".codex/agents/reviewer.md",
    ".codex/docker/Dockerfile.cognee",
    ".codex/scripts/bootstrap-worktree.sh",
    ".codex/scripts/cognee-bridge.sh",
    ".codex/scripts/cognee-brief.sh",
    ".codex/scripts/cognee-sync-planning.sh",
    ".codex/scripts/land.sh",
    ".codex/scripts/sync-planning-to-cognee.sh",
    ".codex/skills/scaiff-repo-setup/SKILL.md",
    ".codex/skills/scaiff-repo-setup/assets/adoption-notes-template.md",
    ".codex/skills/scaiff-repo-setup/references/existing-repo-context-checklist.md",
    ".codex/skills/scaiff-repo-setup/references/manifest-discovery.md",
    ".codex/skills/scaiff-repo-setup/references/scaffold-customization-map.md",
    ".codex/skills/scaiff-repo-setup/references/scaiff-command-matrix.md",
    ".codex/templates/phase-execution.md",
    ".codex/workflows/parallel-execution.md",
    ".env.example",
    ".envrc",
    ".gitignore",
    ".gitleaks.toml",
    ".kamal/secrets.example",
    ".planning/PROJECT.md",
    ".planning/REQUIREMENTS.md",
    ".planning/ROADMAP.md",
    ".planning/STATE.md",
    ".planning/codebase/README.md",
    ".planning/config.json",
    ".planning/milestones/README.md",
    ".planning/phases/README.md",
    ".planning/quick/README.md",
    ".planning/research/README.md",
    ".pre-commit-config.yaml",
    ".rules/index.md",
    ".rules/patterns/bdd-workflow.md",
    ".rules/patterns/beads-integration.md",
    ".rules/patterns/cognee-gsd-integration.md",
    ".rules/patterns/deployment.md",
    ".rules/patterns/env-security.md",
    ".rules/patterns/git-workflow.md",
    ".rules/patterns/gsd-workflow.md",
    "AGENTS.md",
    "README.md",
    "STICKYNOTE.example.md",
    "config/deploy.cognee.yml",
    "config/deploy.yml",
  ],
}
`;

exports[`scaffold snapshots > matches the OpenCode scaffold snapshot 1`] = `
{
  ".codex/README.md": "# OpenCode Compatibility Layer

This repository already has working project systems for backlog tracking, planning, and knowledge capture.
OpenCode should use them directly through this runtime layer.

## Canonical Systems

- .rules/ is the source of truth for architecture and workflow patterns
- .planning/ is the GSD execution and handoff workspace
- .codex/scripts/ contains the live Cognee and planning sync plumbing
- Use native \`bd\` as the Beads task-tracking interface after \`bd init\`

## OpenCode Mapping

| Existing project surface | OpenCode entrypoint |
| --- | --- |
| Runtime scripts | .codex/scripts/*.sh |
| Agent role briefs | .codex/agents/*.md |
| Repo setup skill | .codex/skills/scaiff-repo-setup/SKILL.md |
| Cognee advisor | ./.codex/scripts/cognee-brief.sh |
| Planning sync | ./.codex/scripts/sync-planning-to-cognee.sh |
| Landing protocol | ./.codex/scripts/land.sh |

## Runtime Surface

- \`./.codex/scripts/cognee-bridge.sh\` - low-level Cognee query, upload, and cognify entrypoint
- \`./.codex/scripts/cognee-sync-planning.sh\` - sync GSD planning artifacts into Cognee
- \`./.codex/scripts/sync-planning-to-cognee.sh\` - user-facing planning sync entrypoint
- \`./.codex/scripts/bootstrap-worktree.sh\` - seed local worktree state
- \`.codex/docker/Dockerfile.cognee\` - container build source for the Cognee deploy template
- \`.codex/skills/scaiff-repo-setup/SKILL.md\` - reusable setup workflow for new and existing repositories

## Default Workflow

1. Read relevant .rules/ and current .planning/ context.
2. Review .planning/STATE.md before starting implementation.
3. For existing repos, optionally run \`scaiff --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\` before tailoring new scaffold files.
4. Generate a knowledge brief with ./.codex/scripts/cognee-brief.sh.
5. On a fresh worktree, run ./.codex/scripts/bootstrap-worktree.sh.
6. Break work into waves using .codex/workflows/parallel-execution.md.
7. Validate each wave before handing off or merging into the next.
8. Finish with ./.codex/scripts/land.sh.

## Rules

- Do not create parallel planning systems under .codex/.
- Treat .codex/ as the runtime surface for assistant-specific scripts and docs while keeping \`.planning/\` and \`.rules/\` canonical.
- If Cognee is unavailable, continue with .rules/, .planning/, and repo search.
",
  ".gitignore": ".env
.env.local
.env.*.local
node_modules/
dist/
coverage/
.turbo/
__pycache__/
*.pyc
.pytest_cache/
.coverage
.venv/
*.log
.vscode/
.idea/
.DS_Store
STICKYNOTE.md
.beads/.sync.lock
.beads/sync_base.jsonl
.beads/*.db
.beads/backup/
.beads/export/
.beads/README.md
.beads/interactions.jsonl
.kamal/secrets
.kamal/secrets.*
.kamal/secrets-common
!.kamal/secrets.example
cognee_data/
",
  "AGENTS.md": "# AGENTS.md

> AI Development Guide

## Overview

This repository is prepared for OpenCode through a focused runtime layer while keeping .rules/ and .planning/ as the canonical project systems.

## OpenCode Workflow

OpenCode works in this repository through a focused runtime layer. The canonical systems remain:

- .rules/ for architecture and workflow rules
- .planning/ for GSD planning, execution, and handoff artifacts
- .codex/scripts/ for working Cognee and planning sync backends

Use the OpenCode compatibility docs and scripts under .codex/ as entrypoints, not as a separate source of truth.

### OpenCode Operating Sequence

1. Read the relevant .rules/ documents before changing code or infrastructure.
2. Inspect .planning/STATE.md and any active phase docs in .planning/.
3. Use native \`bd\` for task tracking after the repository is initialized with \`bd init\`.
4. Query Cognee with ./.codex/scripts/cognee-brief.sh "<query>".
5. On a fresh worktree, run ./.codex/scripts/bootstrap-worktree.sh.
6. Execute work in waves with explicit file ownership and validation boundaries.
7. Land the session with ./.codex/scripts/land.sh.

### OpenCode Guardrails

- Do not create duplicate planning systems or issue trackers under .codex/.
- Do not mirror .planning/ into .codex-specific directories.
- Keep Cognee integration non-blocking; if it is down, continue using local docs and planning artifacts.
- Treat .codex/agents/*.md as reusable role briefs and .codex/scripts/*.sh as the executable surface.
- Use \`.codex/skills/scaiff-repo-setup/SKILL.md\` when bootstrapping or adopting another repository with scaiff.
- When the user asks for \`task table\`, format the response as a Markdown table with columns \`ID | Priority | Status | Title\`.
",
  "README.md": "# Snapshot Opencode

This project is scaffolded for the local AI workflow used across OpenCode, GSD, Beads, and Cognee.

## What was added

- Planning artifacts in .planning/
- Codex/OpenCode runtime files in .codex/
- Repo setup skill in .codex/skills/scaiff-repo-setup/
- Beads workflow guidance using native \`bd\`
- Deployment templates in config/ and .kamal/
- OpenCode runtime files in .codex/ and AGENTS.md

## Next steps

1. Update .planning/PROJECT.md with the real product definition.
2. Review AGENTS.md, .codex/README.md, and the guides in .rules/.
3. Copy .env.example to .env and fill in local values.
4. Run \`bd init\` once in the repository before using Beads.
5. Use \`.codex/skills/scaiff-repo-setup/SKILL.md\` when adopting or bootstrapping another repository.
6. If you are adopting a repo with legacy AI framework files, use \`scaiff --mode existing <path> --cleanup-manifest legacy-ai-frameworks-v1 --init-json\`.
7. Create a feature branch before your first commit.
",
  "STICKYNOTE.example.md": "# Snapshot Opencode Sticky Note

Last updated: 2026-03-28

## Current focus

- Active branch:
- Current task:
- Immediate next step:

## Guardrails

- Read \`.planning/STATE.md\` before resuming implementation.
- Use native \`bd\` after running \`bd init\` in this repository.
- Capture follow-up work before ending the session.

## Handoff notes

- What changed:
- What still needs verification:
- Risks or open questions:
",
  "files": [
    ".codex/README.md",
    ".codex/agents/gsd-cognee-advisor.md",
    ".codex/agents/implementer.md",
    ".codex/agents/orchestrator.md",
    ".codex/agents/reviewer.md",
    ".codex/docker/Dockerfile.cognee",
    ".codex/scripts/bootstrap-worktree.sh",
    ".codex/scripts/cognee-bridge.sh",
    ".codex/scripts/cognee-brief.sh",
    ".codex/scripts/cognee-sync-planning.sh",
    ".codex/scripts/land.sh",
    ".codex/scripts/sync-planning-to-cognee.sh",
    ".codex/skills/scaiff-repo-setup/SKILL.md",
    ".codex/skills/scaiff-repo-setup/assets/adoption-notes-template.md",
    ".codex/skills/scaiff-repo-setup/references/existing-repo-context-checklist.md",
    ".codex/skills/scaiff-repo-setup/references/manifest-discovery.md",
    ".codex/skills/scaiff-repo-setup/references/scaffold-customization-map.md",
    ".codex/skills/scaiff-repo-setup/references/scaiff-command-matrix.md",
    ".codex/templates/phase-execution.md",
    ".codex/workflows/parallel-execution.md",
    ".env.example",
    ".envrc",
    ".gitignore",
    ".gitleaks.toml",
    ".kamal/secrets.example",
    ".planning/PROJECT.md",
    ".planning/REQUIREMENTS.md",
    ".planning/ROADMAP.md",
    ".planning/STATE.md",
    ".planning/codebase/README.md",
    ".planning/config.json",
    ".planning/milestones/README.md",
    ".planning/phases/README.md",
    ".planning/quick/README.md",
    ".planning/research/README.md",
    ".pre-commit-config.yaml",
    ".rules/index.md",
    ".rules/patterns/bdd-workflow.md",
    ".rules/patterns/beads-integration.md",
    ".rules/patterns/cognee-gsd-integration.md",
    ".rules/patterns/deployment.md",
    ".rules/patterns/env-security.md",
    ".rules/patterns/git-workflow.md",
    ".rules/patterns/gsd-workflow.md",
    "AGENTS.md",
    "README.md",
    "STICKYNOTE.example.md",
    "config/deploy.cognee.yml",
    "config/deploy.yml",
  ],
}
`;
